// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disable border 1`] = `
<div class="buri-collapse">
  <div class="buri-collapse-item">
    <div role="button" tabindex="0" aria-expanded="false" class="buri-cell buri-cell--clickable buri-collapse-item__title">
      <div class="buri-cell__title"><span>a</span></div><i class="buri-icon buri-icon-arrow buri-cell__right-icon">
        <!----></i>
    </div>
  </div>
  <div class="buri-collapse-item buri-hairline--top">
    <div role="button" tabindex="0" aria-expanded="false" class="buri-cell buri-cell--clickable buri-collapse-item__title">
      <div class="buri-cell__title"><span>b</span></div><i class="buri-icon buri-icon-arrow buri-cell__right-icon">
        <!----></i>
    </div>
  </div>
  <div class="buri-collapse-item buri-hairline--top">
    <div role="button" tabindex="0" aria-expanded="false" class="buri-cell buri-cell--clickable buri-collapse-item__title">
      <div class="buri-cell__title"><span>c</span></div><i class="buri-icon buri-icon-arrow buri-cell__right-icon">
        <!----></i>
    </div>
  </div>
</div>
`;

exports[`lazy render collapse content 1`] = `
<div class="buri-collapse buri-hairline--top-bottom">
  <div class="buri-collapse-item" style="padding: 0px;">
    <div role="button" tabindex="0" aria-expanded="false" class="buri-cell buri-cell--clickable buri-collapse-item__title">
      <div class="buri-cell__title"><span>a</span></div><i class="buri-icon buri-icon-arrow buri-cell__right-icon">
        <!----></i>
    </div>
  </div>
  <div class="buri-collapse-item buri-hairline--top" style="padding: 0px;">
    <div role="button" tabindex="0" aria-expanded="true" class="buri-cell buri-cell--clickable buri-collapse-item__title buri-collapse-item__title--expanded">
      <div class="buri-cell__title"><span>b</span></div><i class="buri-icon buri-icon-arrow buri-cell__right-icon">
        <!----></i>
    </div>
    <div class="buri-collapse-item__wrapper">
      <div class="buri-collapse-item__content">content</div>
    </div>
  </div>
</div>
`;

exports[`render collapse-item slot 1`] = `
<div class="buri-collapse buri-hairline--top-bottom">
  <div class="buri-collapse-item">
    <div role="button" tabindex="0" aria-expanded="false" class="buri-cell buri-cell--clickable buri-collapse-item__title">this is icon<div class="buri-cell__title">this is title</div>
      <div class="buri-cell__value">this is value</div>this is right icon
    </div>
  </div>
</div>
`;
